tweaking quiz..scoreboard added but alignment needs fixing

--- a/quiz/quiz.css
+++ b/quiz/quiz.css
@@ -4,11 +4,15 @@ html {
     font-family: sans-serif;
     /*	font-size: 100%;*/
     line-height: 1.8;
+       display: block;
+
 }
 
 body {
     width: 100%;
     margin: 0 !important;
+/*    margin-left: auto;*/
+/*    margin-right: auto;*/
     height: auto;
     background: rgba(0, 10, 20, .85);
 }
@@ -24,6 +28,7 @@ h2 {
 
 header {
     text-align: left;
+    line-height: 2.5;
 }
 
 .choice {
@@ -38,11 +43,30 @@ header {
     margin-left: 24%;
 }
 
+#next{
+    background-color: rgba(0, 0, 0, 0);
+    border: 5px solid white;
+    width: 47%;
+    padding: 2.5% !important;
+    margin: 4% auto;
+    text-align: center;
+    border: 1px solid white;
+    border-radius: 6px;
+    margin-left: 24%;    
+}
+
 .question {
     display: none;
     text-align: center;
 }
+#next{
+    display:block;
+    background-color:red;
+}
 
+.score{
+ text-align:center;
+}
 
 #back {
     width: 5%;
@@ -59,15 +83,17 @@ header {
 }
 
 #myBar {
-    width: 1%;
+    width: 0%;
     height: 20px;
     background-color: red;
 }
 
 #info_splash {
     position: absolute;
-    left: 42%;
+    align-content: center;
     text-align: center;
+    left:50%;
+    margin-right:-50%;
 }
 
 #understood {
